tests/ill-formed/bad_symbols.v
% this is a comment
var test_3145_ABC : int[],hey_1 : real;

% duplicate declaration
var hey_1 : real;

int func main(par1: int, par2: real, par3: real[141],hey1: int[])
    var var1 : real;
    % unknown symbols
    var999 := 3.14523141;
endfunc


